[workspace]
members = ["oslq", "oslquery-petite"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR Zlib"
repository = "https://github.com/AcademySoftwareFoundation/OpenShadingLanguage"
keywords = ["osl", "shading", "graphics", "vfx"]
categories = ["graphics", "parser-implementations"]

[workspace.dependencies]
ariadne = "0.5"
clap = { version = "4.5", features = ["derive"] }
nom = "8"
oslquery-petite = { path = "oslquery-petite" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ustr = { version = "1", features = ["serde"] }
yansi = "1.0"
